--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 0.3rem;
+  border-color: #282c34;
   cursor: pointer;
   &.whiteBackGround {
     background-color: #c6c6cf;
