--- a/src/components/calculator/calculator.scss
+++ b/src/components/calculator/calculator.scss
@@ -28,15 +28,24 @@
       display: flex;
       align-items: flex-end;
       justify-content: flex-end;
+      flex-direction: column;
       position: absolute;
       bottom: 0;
       width: 100%;
       height: 100%;
-      span {
+      .calculHistory {
+        color: white;
+        margin: 0 1rem 0.3rem 0;
+      }
+      .lineOfElements {
         color: white;
         font-size: 2.2rem;
         font-weight: 600;
         margin: 0 1rem 1rem 0;
+        &.reduceFontSize {
+          //font-size: 1.5rem;
+        }
+      }
     }
   }
 
