--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,10 @@
   overflow: hidden;
   min-height: 100vh;
   background-color: #555455;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 
   .header {
     display: flex;
@@ -10,7 +14,8 @@
     align-items: center;
     justify-content: center;
     .App-logo {
-      height: 5vmin;
+      margin-bottom: 2rem;
+      height: 2.5rem;
       pointer-events: none;
       @media (prefers-reduced-motion: no-preference) {
         animation: App-logo-spin infinite 20s linear;
@@ -26,7 +31,14 @@
     }
   }
   .body {
-    padding: 0 38%;
-    padding-top: 3rem;
+    margin-bottom: 1.8rem;
+    width: 20rem;
+    min-width: 20rem;
+    // padding: 0 38%;
+    // padding-top: 3rem;
+    // @media (max-width: 1220px) {
+    //   padding: 0 34%;
+    //   padding-top: 3rem;
+    // }
   }
 }
