--- a/src/components/calculator/calculator.scss
+++ b/src/components/calculator/calculator.scss
@@ -34,7 +34,7 @@
       width: 100%;
       height: 100%;
       .calculHistory {
-        color: white;
+        color: rgba(255, 255, 255, 0.515);
         margin: 0 1rem 0.3rem 0;
       }
       .lineOfElements {
